fix:reduces safari fade animation flicker

--- a/easemotion/fade.css
+++ b/easemotion/fade.css
@@ -32,6 +32,11 @@
 
 .ease-fade-in {
   animation: ease-kf-fade-in var(--ease-speed-medium) var(--ease-ease) both;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  will-change: opacity, transform;
 }
 
 .ease-fade-out {
